<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *      Copyright 2016 Jean-Pierre Hotz
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *
 *        .o                                .o88       .o88
 *       .88                                "888       "888
 *      o8888oo  ooo  oooo  ooo. .oo.  .oo.   888oooo.   888  oooo d8b
 *      ""888""  888  "888  "888P"Y88bP"Y88b  d88' `88b  888  "888""8P
 *        888    888   888   888   888   888  888   888  888   888
 *        888 .  888   888   888   888   888  888.  888  888   888    .o.
 *        "888Y  `V88V"V8P' o888o o888o o888o 88`bod8P' o888o d888b   Y8P
 *
 */
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.jeanpierrehotz.tumblrmaterialthemequotesgenerator.MainActivity">

    <item
        android:id="@+id/menu_fragment_quotes_add"
        android:orderInCategory="100"
        android:title="@string/menu_fragment_quotes_add"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_fragment_quotes_shuffle"
        android:orderInCategory="101"
        android:title="@string/menu_fragment_quotes_shuffle"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_fragment_quotes_loadfromfile"
        android:orderInCategory="102"
        android:title="@string/menu_fragment_quotes_loadfromfile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_fragment_quotes_writetofile"
        android:orderInCategory="103"
        android:title="@string/menu_fragment_quotes_writetofile"
        app:showAsAction="never"/>

</menu>