<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *      Copyright 2016 Jean-Pierre Hotz
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *
 *        .o                                .o88       .o88
 *       .88                                "888       "888
 *      o8888oo  ooo  oooo  ooo. .oo.  .oo.   888oooo.   888  oooo d8b
 *      ""888""  888  "888  "888P"Y88bP"Y88b  d88' `88b  888  "888""8P
 *        888    888   888   888   888   888  888   888  888   888
 *        888 .  888   888   888   888   888  888.  888  888   888    .o.
 *        "888Y  `V88V"V8P' o888o o888o o888o 88`bod8P' o888o d888b   Y8P
 *
 */
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/tumblrBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        card_view:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/layout_fragment_settings_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_hint_title"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"/>

                <EditText
                    android:id="@+id/layout_fragment_settings_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_hint_description"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/layout_fragment_settings_title_edittext"/>

                <RelativeLayout
                    android:id="@+id/layout_fragment_settings_avatarshape_relativelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_fragment_settings_description_edittext">

                    <TextView
                        android:id="@+id/layout_fragment_settings_avatarshape_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_hint_avatarshape"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"/>

                    <Spinner
                        android:id="@+id/layout_fragment_settings_avatarshape_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/avatarshape_array"
                        android:spinnerMode="dropdown"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/layout_fragment_settings_avatarshape_textview"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/layout_fragment_settings_backgroundcolor_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/colortextview_horizontalpadding"
                    android:paddingStart="@dimen/colortextview_horizontalpadding"
                    android:paddingTop="@dimen/colortextview_verticalpadding"
                    android:paddingBottom="@dimen/colortextview_verticalpadding"
                    android:clickable="true"
                    android:text="@string/settings_hint_backgroundcolor"
                    android:layout_below="@+id/layout_fragment_settings_avatarshape_relativelayout"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_showheaderimage_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_showheaderimage"
                    android:layout_below="@+id/layout_fragment_settings_backgroundcolor_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_showavatar_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_showavatar"
                    android:layout_below="@+id/layout_fragment_settings_showheaderimage_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_showtitle_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_showtitle"
                    android:layout_below="@+id/layout_fragment_settings_showavatar_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_showdescription_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_showdescription"
                    android:layout_below="@+id/layout_fragment_settings_showtitle_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/layout_fragment_settings_firstbackgroundstripecolor_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/colortextview_horizontalpadding"
                    android:paddingStart="@dimen/colortextview_horizontalpadding"
                    android:paddingTop="@dimen/colortextview_verticalpadding"
                    android:paddingBottom="@dimen/colortextview_verticalpadding"
                    android:clickable="true"
                    android:text="@string/settings_hint_firstbackgroundstripecolor"
                    android:layout_below="@+id/layout_fragment_settings_showdescription_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/layout_fragment_settings_secondbackgroundstripecolor_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/colortextview_horizontalpadding"
                    android:paddingStart="@dimen/colortextview_horizontalpadding"
                    android:paddingTop="@dimen/colortextview_verticalpadding"
                    android:paddingBottom="@dimen/colortextview_verticalpadding"
                    android:clickable="true"
                    android:text="@string/settings_hint_secondbackgroundstripecolor"
                    android:layout_below="@+id/layout_fragment_settings_firstbackgroundstripecolor_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/layout_fragment_settings_avatarbordercolor_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/colortextview_horizontalpadding"
                    android:paddingStart="@dimen/colortextview_horizontalpadding"
                    android:paddingTop="@dimen/colortextview_verticalpadding"
                    android:paddingBottom="@dimen/colortextview_verticalpadding"
                    android:clickable="true"
                    android:text="@string/settings_hint_avatarbordercolor"
                    android:layout_below="@+id/layout_fragment_settings_secondbackgroundstripecolor_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <RelativeLayout
                    android:id="@+id/layout_fragment_settings_themecolor_relativelayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_fragment_settings_avatarbordercolor_textview">

                    <TextView
                        android:id="@+id/layout_fragment_settings_themecolor_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_hint_themecolor"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"/>

                    <Spinner
                        android:id="@+id/layout_fragment_settings_themecolor_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/themecolor_array"
                        android:spinnerMode="dropdown"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/layout_fragment_settings_themecolor_textview"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_endlessscrolling_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_endlessscrolling"
                    android:layout_below="@+id/layout_fragment_settings_themecolor_relativelayout"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_slidingheader_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_slidingheader"
                    android:layout_below="@+id/layout_fragment_settings_endlessscrolling_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_backgroundasstripes_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_backgroundasstripes"
                    android:layout_below="@+id/layout_fragment_settings_slidingheader_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_showquotes_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_showquotes"
                    android:layout_below="@+id/layout_fragment_settings_backgroundasstripes_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

                <CheckBox
                    android:id="@+id/layout_fragment_settings_payrespecttomywork_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_hint_payrespecttomyhardwork"
                    android:layout_below="@+id/layout_fragment_settings_showquotes_checkbox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>